After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 757873 - tsdemux: fix unadded pad leak
tsdemux: fix unadded pad leak
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
git master
Other Linux
: Normal normal
: 1.6.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-11-10 09:31 UTC by etienne.peron
Modified: 2015-11-16 07:19 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (845 bytes, patch)
2015-11-10 09:31 UTC, etienne.peron
committed Details | Review

Description etienne.peron 2015-11-10 09:31:14 UTC
Created attachment 315175 [details] [review]
patch

.
Comment 1 etienne.peron 2015-11-10 09:33:55 UTC
If the tsdemux never receives data for a stream, the corresponding pad will never be added and stream->active will remain FALSE. When the stream is removed, the pad will not be unreffed and will be leaked.
Comment 2 Sebastian Dröge (slomo) 2015-11-11 14:33:39 UTC
commit a336181ef5bba20b832fb3db6493ac737beb4bf2
Author: Etienne Peron <etienne.peron@parrot.com>
Date:   Wed Jun 10 14:18:00 2015 +0200

    tsdemux: Fix pad leak when the pad is never exposed
    
    If tsdemux never receives data for a stream, the corresponding pad will never
    be added and stream->active will remain FALSE. When the stream is removed, the
    pad will not be unreffed and will be leaked.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=757873